--- a/src/scss/swiper.scss
+++ b/src/scss/swiper.scss
@@ -4,10 +4,10 @@
 }
 
 .swiper-slide {
-  width: 100%;
-  height: 700px;
   text-align: center;
   font-size: 18px;
+  background: #fff;
+
   /* Center slide text vertically */
   display: -webkit-box;
   display: -ms-flexbox;
@@ -20,16 +20,12 @@
   -webkit-box-align: center;
   -ms-flex-align: center;
   -webkit-align-items: center;
-  justify-content: center;
   align-items: center;
 }
 
 .swiper-slide img {
-  height: 100%;
+  display: block;
   width: 100%;
-  object-fit: contain;
-}
-.swiper-button-next{
-  background-color: #fff;
-  color: #FFFFFF;
+  height: 100%;
+  object-fit: cover;
 }
