--- a/src/scss/media.scss
+++ b/src/scss/media.scss
@@ -1,17 +1,120 @@
+@media (max-width: 1400px) {
+  .work__work-done{
+      padding-left: 60px ;
+  }
+
+}
+
+@media (max-width: 1200px) {
+  .work__row{
+    display: flex;
+    justify-content: center;
+  }
+  .work__work-done{
+
+  }
+  .work__col-photo {
+    width: 500px;
+    height: 500px;
+
+  }
+  .home__bg-picture-div{
+    height: 570px;
+  }
+  .footer__logo-div{
+    display: none;
+  }
+
+  .footer__form{
+    display: none;
+  }
+
+  .footer__about-div{
+    padding-left: 50px;
+
+  }
+}
+
+
+
 @media (max-width: 992px) {
+
+  .stars__main{
+    padding-left: 32px;
+  }
+  .stars__text{
+    font-size: 20px;
+  }
+    .footer__logo-div{
+      display: none;
+    }
+  .footer__form{
+    display: none;
+  }
+
     .header__header-top{
       justify-content: flex-start;
     }
     .header__header-below {
       display: flex;
       align-items: center;
+
     }
     .logo-burger {
       display: flex;
     }
+
     .header__navbar-below {
       display: none;
     }
+    .header__navbar-below.active {
+      display: flex;
+      flex-direction: column;
+      width: 70%;
+      position: fixed;
+      top: 0;
+      right: 0;
+      background-color: #b8b9b1;
+      height: 100%;
+      justify-content: center;
+      z-index: 4;
+      transition: 4s;
+      color: #FFFFFF;
+    }
+    .header__navbar-below-menu-1.active{
+      margin-top: 30px;
+
+    }
+
+    .header__navbar-below-menu-1 {
+        flex-direction: column;
+        margin-bottom: 60px;
+        justify-content: center;
+
+      }
+    .header__navbar-below-menu-2 {
+        @include text($Roboto, 16px, #fff);
+        flex-direction: column;
+        margin-bottom: 60px;
+
+      }
+
+
+      .header__navbar-below-item.active{
+        @include text($Roboto, 16px, #fff);
+        line-height: 22px;
+        margin-left: 0;
+        margin-bottom: 20px;
+        cursor: pointer;
+
+        &:nth-child(5){
+          margin-right: 20px;
+        }
+        &:hover{
+          color: #0a53be;
+        }
+      }
+
     .burger {
         display: flex;
         width: 30px;
@@ -19,6 +122,7 @@
         position: fixed;
         right: 60px;
         top: 70px;
+
 
         &-line {
           height: 3px;
@@ -50,27 +154,77 @@
           }
         }
       }
+  .burger.active {
+    z-index: 5;
 
+    .burger-line {
+      height: 0;
 
+      &::before {
+        transform: rotate(-45deg);
+        transition: 1s;
+        top: 0;
+      }
+
+      &::after {
+        transform: rotate(45deg);
+        transition: 1s;
+        top: 0;
+      }
     }
-
-
-
-  @media (max-width: 576px) {
-    .container, .container-sm {
-      max-width: 540px;
-    }
-    .col-12 {
-      text-align: center;
-    }
-    .burger {
-      right: 30px;
-      top: 70px;
-    }
+  }
+  .work__col-photo {
+    width: 420px;
+    height: 420px;
+  }
+  .work__row{
+    display: flex;
+    justify-content: flex-start;
+    padding-left: 20px;
 
   }
+  .work__work-done{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+  .work__col-title{
+    margin-left: 30px;
+    }
+
+  .work__col-subtitle{
+    margin-left: 30px;
+  }
+  .work__text-info{
+    padding: 0 0 100px;
+  }
+  .work__title-1{
+    font-size: 30px;
+    line-height: 40px;
+  }
+  .work__title-2{
+    font-size: 30px;
+    line-height: 40px;
+  }
+  .home__bg-picture-div{
+    height: 450px;
+  }
+  .footer__about-div{
+    padding-left: 50px;
+
+  }
+}
+
+
+
+
 
   @media (max-width: 768px) {
+    .footer__about-div{
+      padding-left: 50px;
+
+    }
+
     .container, .container-md, .container-sm {
       max-width: 750px;
     }
@@ -81,9 +235,176 @@
     .col-sm-12{
       text-align: center;
     }
+    .home__title{
+      font-size: 30px;
+      line-height: 40px;
+    }
+    .home__subtitle{
+      font-size: 20px;
+      line-height: 30px;
+      margin-top: 30px;
+    }
+    .work{
+      padding: 50px 0;
+    }
+    .work__text-info{
+      text-align: left;
+    }
+
+    .work__col-photo {
+      width: 350px;
+      height: 350px;
+
+    }
+    .work__col-title{
+      font-size: 25px;
+      margin-left: 0;
+    }
+
+    .work__col-subtitle{
+      font-size: 14px;
+      line-height: 22px;
+    }
+    .go-top{
+      display: none;
+    }
     
 
   }
+@media (max-width: 710px) {
+  .work__col-photo {
+    width: 300px;
+    height: 300px;
+
+  }
+  .work__col-title{
+    font-size: 25px;
+  }
+
+  .work__col-subtitle{
+    font-size: 12px;
+    line-height: 20px;
+  }
+  .home__bg-picture-div{
+    height: 350px;
+  }
+}
+  @media (max-width: 615px) {
+  .work__col-photo {
+    width: 250px;
+    height: 250px;
+
+  }
+    .work__col-title{
+      font-size: 20px;
+    }
+
+    .work__col-subtitle{
+      font-size: 12px;
+      line-height: 20px;
+    }
+    .home__bg-picture-div{
+      height: 300px;
+    }
+
+}
+
+
+@media (max-width: 576px) {
+  .stars__main{
+    padding-left: 16px;
+  }
+  .stars__text{
+    font-size: 16px;
+  }
+  .container, .container-sm {
+    max-width: 540px;
+  }
+  .col-12 {
+    text-align: center;
+  }
+  .burger {
+    right: 30px;
+    top: 70px;
+  }
+  .work__col-photo{
+    margin: 10px auto;
+
+  }
+  .col-12{
+    margin-bottom: 20px;
+  }
+  .work{
+    padding: 0;
+  }
+
+  .work__row{
+    display: flex;
+    justify-content: flex-start;
+    padding-left: 20px;
+
+  }
+  .work__work-done{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+  .work__col-title{
+    margin-left: 30px;
+  }
+
+  .work__col-subtitle{
+    margin-left: 0;
+  }
+  .work__text-info{
+    padding: 30px 100px;
+  }
+  .work__work-done{
+    padding: 0;
+  }
+  .work__title-1{
+    font-size: 20px;
+    line-height: 30px;
+  }
+  .work__title-2{
+    font-size: 20px;
+    line-height: 30px;
+  }
+
+  .get-room__row{
+    display: flex;
+    justify-content: center;
+    text-align: center;
+  }
+  .get-room__plus-div{
+    &:nth-child(3){
+      margin-top: 24px;
+    }
+  }
+  .get-room__title{
+    font-size: 30px;
+  }
+  .home__bg-picture-div{
+    height: 250px;
+  }
+  .footer{
+    padding: 30px 10px;
+  }
+  .col-12{
+    margin-top: 20px;
+    text-align: center;
+  }
+  .media-row{
+    display: flex;
+    justify-content: center;
+  }
+  .footer__about-div{
+    padding-left: 50px;
+
+  }
+
+}
+
 
 
 
