--- a/src/css/media.css
+++ b/src/css/media.css
@@ -1,14 +1,8 @@
-@media (max-width: 1400px) {
-  .logo-burger {
-    display: none;
-  }
-}
-@media (max-width: 1200px) {
-  .logo-burger {
-    display: none;
-  }
-}
 @media (max-width: 992px) {
+  .header__header-top {
+    justify-content: flex-start;
+  }
+
   .header__header-below {
     display: flex;
     align-items: center;
@@ -22,17 +16,43 @@
     display: none;
   }
 
+  .header__navbar-below.active {
+    display: flex;
+    flex-direction: column;
+    width: 50%;
+    position: fixed;
+    top: 0;
+    right: 0;
+    background-color: #5d5050;
+    height: 100%;
+    justify-content: center;
+    z-index: 4;
+    transition: 0.6s;
+  }
+  .header__navbar-below.active .header__navbar-below-menu-1 {
+    flex-direction: column;
+    margin-bottom: 60px;
+  }
+  .header__navbar-below.active .header__navbar-below-menu-2 {
+    flex-direction: column;
+    margin-bottom: 60px;
+  }
+  .header__navbar-below.active .header__item {
+    margin-top: 30px;
+    font-size: 16px;
+  }
+
   .burger {
     display: flex;
     width: 30px;
     height: 30px;
     position: fixed;
-    right: 30px;
-    top: 50px;
+    right: 60px;
+    top: 70px;
   }
   .burger-line {
     height: 3px;
-    background-color: #AAAAAA;
+    background-color: #000000;
     position: absolute;
     top: 50%;
     left: 50%;
@@ -42,7 +62,7 @@
   .burger-line::before {
     content: "";
     position: absolute;
-    background-color: #AAAAAA;
+    background-color: #000000;
     width: 100%;
     height: 2px;
     top: -9px;
@@ -51,7 +71,7 @@
   .burger-line::after {
     content: "";
     position: absolute;
-    background-color: #AAAAAA;
+    background-color: #000000;
     width: 100%;
     height: 2px;
     bottom: -9px;
@@ -60,11 +80,29 @@
 }
 @media (max-width: 576px) {
   .container, .container-sm {
-    max-width: 560px;
+    max-width: 540px;
+  }
+
+  .col-12 {
+    text-align: center;
+  }
+
+  .burger {
+    right: 30px;
+    top: 70px;
   }
 }
 @media (max-width: 768px) {
   .container, .container-md, .container-sm {
     max-width: 750px;
+  }
+
+  .burger {
+    right: 30px;
+    top: 70px;
+  }
+
+  .col-sm-12 {
+    text-align: center;
   }
 }
