--- a/src/css/style.css
+++ b/src/css/style.css
@@ -10,6 +10,30 @@
   margin: 0 auto;
 }
 
+.go-top {
+  font-family: Roboto, sans-serif;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 11px;
+  color: white;
+  text-transform: uppercase;
+  display: none;
+  transform: rotate(-90deg);
+  width: 180px;
+  height: 30px;
+  background-color: #2B2B2B;
+  text-decoration: none;
+  text-align: center;
+  padding: 10px;
+  position: fixed;
+  bottom: 80px;
+  right: -2%;
+  border-radius: 5%;
+}
+.go-top:hover {
+  background-color: #afa8ad;
+}
+
 .header {
   width: 100%;
   display: flex;
@@ -121,10 +145,13 @@
 .home {
   padding: 50px 0 80px;
 }
-.home__bg-picture {
-  background-image: url("../images/home/home.svg");
+.home__bg-picture-div {
   width: 100%;
   height: 746px;
+}
+.home__bg-picture {
+  width: 100%;
+  object-fit: contain;
 }
 .home__title {
   font-family: Roboto, sans-serif;
@@ -152,108 +179,65 @@
   justify-content: center;
 }
 
-@media (max-width: 992px) {
-  .header__header-top {
-    justify-content: flex-start;
-  }
-
-  .header__header-below {
-    display: flex;
-    align-items: center;
-  }
-
-  .logo-burger {
-    display: flex;
-  }
-
-  .header__navbar-below {
-    display: none;
-  }
-
-  .burger {
-    display: flex;
-    width: 30px;
-    height: 30px;
-    position: fixed;
-    right: 60px;
-    top: 70px;
-  }
-  .burger-line {
-    height: 3px;
-    background-color: #000000;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%);
-    width: 100%;
-  }
-  .burger-line::before {
-    content: "";
-    position: absolute;
-    background-color: #000000;
-    width: 100%;
-    height: 2px;
-    top: -9px;
-    left: 0;
-  }
-  .burger-line::after {
-    content: "";
-    position: absolute;
-    background-color: #000000;
-    width: 100%;
-    height: 2px;
-    bottom: -9px;
-    left: 0;
-  }
+.animate__animated.animate__bounceInLeft {
+  --animate-duration: 7s;
 }
-@media (max-width: 576px) {
-  .container, .container-sm {
-    max-width: 540px;
-  }
 
-  .col-12 {
-    text-align: center;
-  }
-
-  .burger {
-    right: 30px;
-    top: 70px;
-  }
-}
-@media (max-width: 768px) {
-  .container, .container-md, .container-sm {
-    max-width: 750px;
-  }
-
-  .burger {
-    right: 30px;
-    top: 70px;
-  }
-
-  .col-sm-12 {
-    text-align: center;
-  }
-}
 .rooms {
   padding: 0 48px;
 }
 .rooms__info {
   display: flex;
   flex-direction: column;
+  position: relative;
+  cursor: pointer;
 }
 .rooms__info:first-child {
   margin-bottom: 32px;
 }
 .rooms__img {
-  margin-bottom: 9px;
+  width: 100%;
 }
 .rooms__room-name {
-  font-family: Roboto, sans-serif;
-  font-size: 16px;
-  color: #1A1A1A;
   font-style: normal;
   font-weight: normal;
   line-height: 28px;
+}
+.rooms__img-overlay-div {
+  width: 100%;
+  position: relative;
+  margin-bottom: 9px;
+}
+.rooms__overlay {
+  font-family: Roboto, sans-serif;
+  font-size: 12px;
+  color: #fff;
+  position: absolute;
+  bottom: 5px;
+  background: black;
+  background: rgba(0, 0, 0, 0.5);
+  /* Black see-through */
+  width: 100%;
+  transition: 2s ease;
+  opacity: 0;
+  padding: 20px;
+  text-align: center;
+}
+.rooms__overlay-title {
+  font-family: Roboto, sans-serif;
+  font-size: 24px;
+  color: #fff;
+  margin-bottom: 10px;
+}
+.rooms__overlay-subtitle {
+  font-family: Roboto, sans-serif;
+  font-size: 16px;
+  color: #fff;
+  margin-bottom: 10px;
+}
+
+.rooms__img-overlay-div:hover .rooms__overlay {
+  opacity: 1;
 }
 
 .brands {
@@ -270,9 +254,6 @@
   margin-bottom: 27px;
 }
 .brands__subtitle {
-  font-family: Roboto, sans-serif;
-  font-size: 24px;
-  color: #4A4A4A;
   font-style: normal;
   font-weight: normal;
   line-height: 36px;
@@ -368,7 +349,6 @@
 }
 
 .swiper-button-next {
-  background-color: #fff;
   color: #FFFFFF;
 }
 
@@ -428,6 +408,10 @@
   line-height: 24px;
   text-align: left;
 }
+.adv__img {
+  width: 100px;
+  height: 100px;
+}
 
 .stars {
   padding: 100px 0;
@@ -474,4 +458,878 @@
   letter-spacing: 0.75px;
   text-transform: uppercase;
   text-decoration: none;
+}
+
+.work {
+  padding: 100px 0;
+}
+.work__text-info {
+  padding: 0 211px 135px;
+}
+.work__title-1 {
+  font-family: Roboto, sans-serif;
+  font-size: 42px;
+  color: #AAAAAA;
+  font-style: normal;
+  font-weight: normal;
+  line-height: 52px;
+  margin-bottom: 25px;
+}
+.work__title-2 {
+  font-family: Roboto, sans-serif;
+  font-size: 42px;
+  color: #000000;
+  font-style: normal;
+  font-weight: normal;
+  line-height: 52px;
+}
+.work__row {
+  margin-bottom: 64px;
+}
+.work__col-photo {
+  width: 670px;
+  height: 670px;
+  object-fit: contain;
+}
+.work__col-photo-1 {
+  width: 100%;
+  height: 100%;
+}
+.work__work-done {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: flex-start;
+}
+.work__col-title {
+  font-family: Roboto, sans-serif;
+  font-size: 32px;
+  color: #1A1A1A;
+  font-style: normal;
+  font-weight: normal;
+  line-height: 36px;
+  margin-bottom: 27px;
+}
+.work__col-subtitle {
+  font-family: Roboto, sans-serif;
+  font-size: 16px;
+  color: #AAAAAA;
+  font-style: normal;
+  font-weight: normal;
+  line-height: 24px;
+}
+
+.get-room {
+  padding: 100px 0;
+}
+.get-room__bg {
+  background: #F2F2F2;
+  border-radius: 2px;
+  padding: 63px 0 27px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+.get-room__title {
+  font-family: Roboto, sans-serif;
+  font-size: 46px;
+  color: #000000;
+  font-style: normal;
+  font-weight: normal;
+  line-height: 51px;
+  text-align: center;
+  margin-bottom: 65px;
+}
+.get-room__plus-div {
+  width: 200px;
+  height: 100px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+.get-room__text {
+  margin-top: 22px;
+}
+.get-room__btn {
+  font-family: Roboto, sans-serif;
+  font-size: 12px;
+  color: #fff;
+  font-style: normal;
+  font-weight: normal;
+  width: 146px;
+  height: 50px;
+  background: #46856E;
+  border-radius: 2px;
+  text-align: center;
+  margin: 70px 0 26px;
+  border: none;
+  cursor: pointer;
+  transition: 0.2s;
+}
+.get-room__btn:hover {
+  color: #46856E;
+  background-color: #FFFFFF;
+  transition: 0.3s;
+  border: 6px solid #46856E;
+  border-radius: 10px;
+}
+.get-room__extra {
+  font-family: Roboto, sans-serif;
+  font-size: 12px;
+  color: #AAAAAA;
+  font-style: normal;
+  font-weight: normal;
+  line-height: 14px;
+}
+
+.footer {
+  background-color: #2B2B2B;
+  padding: 97px 0 51px;
+  height: 620px;
+  font-family: Roboto, sans-serif;
+  font-size: 14px;
+  color: #fff;
+  font-style: normal;
+  font-weight: normal;
+  line-height: 16px;
+  letter-spacing: 0.5px;
+}
+.footer__logo-div {
+  display: flex;
+  justify-content: center;
+}
+.footer__col-2-text {
+  margin-bottom: 4px;
+}
+.footer__col-2-text:first-child {
+  margin-bottom: 17px;
+}
+.footer__col-2-text:nth-child(8) {
+  margin-bottom: 45px;
+}
+.footer__col-2-text:nth-child(9) {
+  margin-bottom: 45px;
+}
+.footer__col-2-text {
+  font-style: normal;
+  font-weight: normal;
+  line-height: 16px;
+  letter-spacing: 0.5px;
+}
+.footer__col-3-text {
+  margin-bottom: 4px;
+}
+.footer__col-3-text:first-child {
+  margin-bottom: 17px;
+}
+.footer__col-3-text:nth-child(9) {
+  margin-bottom: 20px;
+}
+.footer__col-3-text:nth-child(10) {
+  margin-bottom: 20px;
+}
+.footer__media {
+  margin-top: 17px;
+  margin-left: 13px;
+  height: 20px;
+  width: 20px;
+  background-repeat: no-repeat;
+}
+.footer__media:first-child {
+  margin-left: 0;
+  background-image: url("../images/footer/fc.svg");
+}
+.footer__media:nth-child(2) {
+  background-image: url("../images/footer/insta.svg");
+}
+.footer__media:nth-child(3) {
+  background-image: url("../images/footer/in.svg");
+}
+.footer__media:nth-child(4) {
+  background-image: url("../images/footer/pint.svg");
+}
+.footer__col-5-text:first-child {
+  margin-bottom: 17px;
+}
+.footer__col-5-text:nth-child(2) {
+  margin-bottom: 30px;
+}
+.footer__label {
+  height: 54px;
+  width: 327px;
+  box-sizing: border-box;
+}
+.footer__input {
+  border: 1px solid rgba(255, 255, 255, 0.4);
+  background-color: #2B2B2B;
+  color: white;
+  padding-left: 10px;
+  border-radius: 3px;
+  height: 54px;
+  width: 327px;
+  margin-bottom: 14px;
+}
+.footer__select {
+  font-family: Roboto, sans-serif;
+  font-size: 14px;
+  color: rgba(255, 255, 255, 0.5);
+  margin-left: 220px;
+  border: none;
+  outline: none;
+  background-color: #2B2B2B;
+  font-style: normal;
+  font-weight: normal;
+  line-height: 21px;
+  margin-bottom: 61px;
+}
+.footer__label-checkbox {
+  font-family: Roboto, sans-serif;
+  font-size: 11px;
+  color: rgba(255, 255, 255, 0.5);
+  font-style: normal;
+  font-weight: normal;
+  line-height: 13px;
+  letter-spacing: 2.4px;
+  text-transform: uppercase;
+  color: rgba(255, 255, 255, 0.5);
+  position: relative;
+  margin-bottom: 58px;
+}
+.footer__checkbox {
+  visibility: hidden;
+  /* <-- Hide the default checkbox. The rest is to hide and allow tabbing, which display:none prevents */
+  display: block;
+  height: 0;
+  width: 0;
+  position: absolute;
+  left: 100px;
+  overflow: hidden;
+}
+.footer__span {
+  width: 26px;
+  height: 26px;
+  background: #2B2B2B;
+  border: 1px solid rgba(255, 255, 255, 0.5);
+  box-sizing: border-box;
+  display: inline-block;
+  position: absolute;
+  left: -30px;
+}
+.footer__label-text-span {
+  margin-left: 20px;
+}
+.footer [type=checkbox]:checked + span {
+  /* <-- Style its checked state */
+  background-image: url("../images/footer/check.png");
+  background-position: center;
+  background-repeat: no-repeat;
+}
+.footer__btn {
+  font-family: Roboto, sans-serif;
+  font-size: 14px;
+  color: #fff;
+  margin-top: 58px;
+  text-transform: uppercase;
+  float: right;
+  right: 10px;
+  background: none;
+  border: none;
+  cursor: pointer;
+}
+
+.swiper-container {
+  width: 100%;
+  height: 100%;
+}
+
+.swiper-slide {
+  text-align: center;
+  font-size: 18px;
+  background: #fff;
+  /* Center slide text vertically */
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.swiper-slide img {
+  display: block;
+  width: 100%;
+  height: 80%;
+  margin-bottom: 10px;
+  object-fit: cover;
+}
+
+.overlay {
+  position: fixed;
+  width: 100%;
+  height: 100vh;
+  top: 0;
+  left: 0;
+  background: rgba(0, 0, 0, 0.56);
+  display: none;
+  z-index: 1;
+}
+.overlay .form {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  padding: 10px 20px;
+}
+.overlay .form__label {
+  width: 100%;
+  font-family: Roboto, sans-serif;
+  font-size: 16px;
+  color: white;
+}
+.overlay .form__input {
+  font-family: Roboto, sans-serif;
+  font-size: 16px;
+  color: #131313;
+  width: 100%;
+  height: 40px;
+  border-radius: 2px;
+  border: 1px solid #717880;
+  outline: none;
+  background: none;
+  padding-left: 10px;
+}
+.overlay .form__button {
+  font-family: Roboto, sans-serif;
+  font-size: 16px;
+  color: #131313;
+  border-radius: 2px;
+  height: 40px;
+  width: 100%;
+  border: none;
+  outline: none;
+  cursor: pointer;
+  transition: 1s;
+}
+.overlay .form__button:hover {
+  font-family: Roboto, sans-serif;
+  font-size: 16px;
+  color: #fff;
+  background: #46856E;
+  transition: 1s;
+}
+.overlay .popup {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 400px;
+  max-height: 600px;
+  padding: 32px 40px 42px;
+  border-radius: 10px;
+  background: linear-gradient(to top left, powderblue, pink);
+  z-index: 10;
+}
+.overlay .popup__consultation {
+  display: none;
+}
+.overlay .popup__consultation-title {
+  font-family: Roboto, sans-serif;
+  font-size: 25px;
+  color: #131313;
+  text-align: center;
+  margin-bottom: 10px;
+}
+.overlay .popup__consultation-subtitle {
+  font-family: Roboto, sans-serif;
+  font-size: 14px;
+  color: #131313;
+  line-height: 25px;
+  text-align: center;
+  margin-bottom: 24px;
+}
+.overlay .popup__close {
+  position: absolute;
+  top: 0;
+  right: -41px;
+  width: 21px;
+  height: 21px;
+}
+.overlay .popup__close:hover {
+  cursor: pointer;
+  background-color: rgba(255, 255, 255, 0.5);
+  border-radius: 10%;
+}
+.overlay .popup__close::before {
+  position: absolute;
+  left: 0;
+  top: 50%;
+  content: "";
+  width: 100%;
+  height: 2px;
+  background-color: white;
+  transform: rotate(45deg);
+}
+.overlay .popup__close::after {
+  position: absolute;
+  left: 0;
+  top: 50%;
+  content: "";
+  width: 100%;
+  height: 2px;
+  background-color: white;
+  transform: rotate(-45deg);
+}
+.overlay .popup__order {
+  display: none;
+}
+.overlay .popup__order-title {
+  font-family: Roboto, sans-serif;
+  font-size: 18px;
+  color: #0d0d0d;
+  text-align: center;
+  margin-bottom: 7px;
+}
+.overlay .popup__order-subtitle {
+  font-family: Roboto, sans-serif;
+  font-size: 18px;
+  color: #0d0d0d;
+  text-align: center;
+  margin-bottom: 24px;
+}
+.overlay .popup__thanks {
+  display: none;
+}
+.overlay .popup__thanks-title {
+  font-family: Roboto, sans-serif;
+  font-size: 18px;
+  color: #0d0d0d;
+  text-align: center;
+  margin-bottom: 31px;
+}
+.overlay .popup__thanks-subtitle {
+  font-family: Roboto, sans-serif;
+  font-size: 18px;
+  color: #0d0d0d;
+  text-align: center;
+  margin-bottom: 24px;
+  line-height: 30px;
+}
+.overlay .popup__buy-info {
+  display: none;
+}
+
+@media (max-width: 1400px) {
+  .work__work-done {
+    padding-left: 60px;
+  }
+}
+@media (max-width: 1200px) {
+  .work__row {
+    display: flex;
+    justify-content: center;
+  }
+
+  .work__col-photo {
+    width: 500px;
+    height: 500px;
+  }
+
+  .home__bg-picture-div {
+    height: 570px;
+  }
+
+  .footer__logo-div {
+    display: none;
+  }
+
+  .footer__form {
+    display: none;
+  }
+
+  .footer__about-div {
+    padding-left: 50px;
+  }
+}
+@media (max-width: 992px) {
+  .stars__main {
+    padding-left: 32px;
+  }
+
+  .stars__text {
+    font-size: 20px;
+  }
+
+  .footer__logo-div {
+    display: none;
+  }
+
+  .footer__form {
+    display: none;
+  }
+
+  .header__header-top {
+    justify-content: flex-start;
+  }
+
+  .header__header-below {
+    display: flex;
+    align-items: center;
+  }
+
+  .logo-burger {
+    display: flex;
+  }
+
+  .header__navbar-below {
+    display: none;
+  }
+
+  .header__navbar-below.active {
+    display: flex;
+    flex-direction: column;
+    width: 70%;
+    position: fixed;
+    top: 0;
+    right: 0;
+    background-color: #b8b9b1;
+    height: 100%;
+    justify-content: center;
+    z-index: 4;
+    transition: 4s;
+    color: #FFFFFF;
+  }
+
+  .header__navbar-below-menu-1.active {
+    margin-top: 30px;
+  }
+
+  .header__navbar-below-menu-1 {
+    flex-direction: column;
+    margin-bottom: 60px;
+    justify-content: center;
+  }
+
+  .header__navbar-below-menu-2 {
+    font-family: Roboto, sans-serif;
+    font-size: 16px;
+    color: #fff;
+    flex-direction: column;
+    margin-bottom: 60px;
+  }
+
+  .header__navbar-below-item.active {
+    font-family: Roboto, sans-serif;
+    font-size: 16px;
+    color: #fff;
+    line-height: 22px;
+    margin-left: 0;
+    margin-bottom: 20px;
+    cursor: pointer;
+  }
+  .header__navbar-below-item.active:nth-child(5) {
+    margin-right: 20px;
+  }
+  .header__navbar-below-item.active:hover {
+    color: #0a53be;
+  }
+
+  .burger {
+    display: flex;
+    width: 30px;
+    height: 30px;
+    position: fixed;
+    right: 60px;
+    top: 70px;
+  }
+  .burger-line {
+    height: 3px;
+    background-color: #000000;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%);
+    width: 100%;
+  }
+  .burger-line::before {
+    content: "";
+    position: absolute;
+    background-color: #000000;
+    width: 100%;
+    height: 2px;
+    top: -9px;
+    left: 0;
+  }
+  .burger-line::after {
+    content: "";
+    position: absolute;
+    background-color: #000000;
+    width: 100%;
+    height: 2px;
+    bottom: -9px;
+    left: 0;
+  }
+
+  .burger.active {
+    z-index: 5;
+  }
+  .burger.active .burger-line {
+    height: 0;
+  }
+  .burger.active .burger-line::before {
+    transform: rotate(-45deg);
+    transition: 1s;
+    top: 0;
+  }
+  .burger.active .burger-line::after {
+    transform: rotate(45deg);
+    transition: 1s;
+    top: 0;
+  }
+
+  .work__col-photo {
+    width: 420px;
+    height: 420px;
+  }
+
+  .work__row {
+    display: flex;
+    justify-content: flex-start;
+    padding-left: 20px;
+  }
+
+  .work__work-done {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+
+  .work__col-title {
+    margin-left: 30px;
+  }
+
+  .work__col-subtitle {
+    margin-left: 30px;
+  }
+
+  .work__text-info {
+    padding: 0 0 100px;
+  }
+
+  .work__title-1 {
+    font-size: 30px;
+    line-height: 40px;
+  }
+
+  .work__title-2 {
+    font-size: 30px;
+    line-height: 40px;
+  }
+
+  .home__bg-picture-div {
+    height: 450px;
+  }
+
+  .footer__about-div {
+    padding-left: 50px;
+  }
+}
+@media (max-width: 768px) {
+  .footer__about-div {
+    padding-left: 50px;
+  }
+
+  .container, .container-md, .container-sm {
+    max-width: 750px;
+  }
+
+  .burger {
+    right: 30px;
+    top: 70px;
+  }
+
+  .col-sm-12 {
+    text-align: center;
+  }
+
+  .home__title {
+    font-size: 30px;
+    line-height: 40px;
+  }
+
+  .home__subtitle {
+    font-size: 20px;
+    line-height: 30px;
+    margin-top: 30px;
+  }
+
+  .work {
+    padding: 50px 0;
+  }
+
+  .work__text-info {
+    text-align: left;
+  }
+
+  .work__col-photo {
+    width: 350px;
+    height: 350px;
+  }
+
+  .work__col-title {
+    font-size: 25px;
+    margin-left: 0;
+  }
+
+  .work__col-subtitle {
+    font-size: 14px;
+    line-height: 22px;
+  }
+
+  .go-top {
+    display: none;
+  }
+}
+@media (max-width: 710px) {
+  .work__col-photo {
+    width: 300px;
+    height: 300px;
+  }
+
+  .work__col-title {
+    font-size: 25px;
+  }
+
+  .work__col-subtitle {
+    font-size: 12px;
+    line-height: 20px;
+  }
+
+  .home__bg-picture-div {
+    height: 350px;
+  }
+}
+@media (max-width: 615px) {
+  .work__col-photo {
+    width: 250px;
+    height: 250px;
+  }
+
+  .work__col-title {
+    font-size: 20px;
+  }
+
+  .work__col-subtitle {
+    font-size: 12px;
+    line-height: 20px;
+  }
+
+  .home__bg-picture-div {
+    height: 300px;
+  }
+}
+@media (max-width: 576px) {
+  .stars__main {
+    padding-left: 16px;
+  }
+
+  .stars__text {
+    font-size: 16px;
+  }
+
+  .container, .container-sm {
+    max-width: 540px;
+  }
+
+  .col-12 {
+    text-align: center;
+  }
+
+  .burger {
+    right: 30px;
+    top: 70px;
+  }
+
+  .work__col-photo {
+    margin: 10px auto;
+  }
+
+  .col-12 {
+    margin-bottom: 20px;
+  }
+
+  .work {
+    padding: 0;
+  }
+
+  .work__row {
+    display: flex;
+    justify-content: flex-start;
+    padding-left: 20px;
+  }
+
+  .work__work-done {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+
+  .work__col-title {
+    margin-left: 30px;
+  }
+
+  .work__col-subtitle {
+    margin-left: 0;
+  }
+
+  .work__text-info {
+    padding: 30px 100px;
+  }
+
+  .work__work-done {
+    padding: 0;
+  }
+
+  .work__title-1 {
+    font-size: 20px;
+    line-height: 30px;
+  }
+
+  .work__title-2 {
+    font-size: 20px;
+    line-height: 30px;
+  }
+
+  .get-room__row {
+    display: flex;
+    justify-content: center;
+    text-align: center;
+  }
+
+  .get-room__plus-div:nth-child(3) {
+    margin-top: 24px;
+  }
+
+  .get-room__title {
+    font-size: 30px;
+  }
+
+  .home__bg-picture-div {
+    height: 250px;
+  }
+
+  .footer {
+    padding: 30px 10px;
+  }
+
+  .col-12 {
+    margin-top: 20px;
+    text-align: center;
+  }
+
+  .media-row {
+    display: flex;
+    justify-content: center;
+  }
+
+  .footer__about-div {
+    padding-left: 50px;
+  }
 }
