--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1333,3 +1333,17 @@
     padding-left: 50px;
   }
 }
+@media (max-width: 515px) {
+  .home__title {
+    margin-top: 16px;
+  }
+}
+@media (max-width: 450px) {
+  .home__title {
+    margin-top: 0;
+  }
+
+  .home__bg-picture-div {
+    height: 200px;
+  }
+}
