--- a/src/scss/media.scss
+++ b/src/scss/media.scss
@@ -391,7 +391,7 @@
     padding: 30px 10px;
   }
   .col-12{
-    margin-top: 20px;
+    margin-top: 45px;
     text-align: center;
   }
   .media-row{
@@ -401,6 +401,10 @@
   .footer__about-div{
     padding-left: 50px;
 
+  }
+  .go-top{
+    position: fixed;
+    right: -15%;
   }
 
 }
