--- a/src/scss/media.scss
+++ b/src/scss/media.scss
@@ -404,7 +404,7 @@
   }
   .go-top{
     position: fixed;
-    right: -15%;
+    right: -10%;
   }
 
 }
@@ -419,6 +419,10 @@
   }
   .home__bg-picture-div{
     height: 200px;
+  }
+  .go-top{
+    position: fixed;
+    right: -15%;
   }
 }
 
