--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1357,3 +1357,11 @@
     right: -15%;
   }
 }
+@media (max-width: 400px) {
+  .get-room__plus-div {
+    margin-bottom: 40px;
+  }
+  .get-room__plus-div:nth-child(3) {
+    margin-bottom: 0;
+  }
+}
