--- a/src/scss/media.scss
+++ b/src/scss/media.scss
@@ -425,6 +425,15 @@
     right: -15%;
   }
 }
+@media (max-width: 400px) {
+  .get-room__plus-div{
+    margin-bottom: 40px;
+    &:nth-child(3){
+      margin-bottom: 0;
+    }
+  }
+
+}
 
 
 
